[project]
name = "news-scraper"
version = "0.1.0"
description = "A multi-source news scraping and summarization tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "newspaper3k",
    "requests",
    "openai",
    "beautifulsoup4",
    "praw",
    "google-auth-oauthlib",
    "google-auth",
    "sendgrid",
    "pytz",
    "google-genai",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
