[project]
name = "news-scraper"
version = "0.1.0"
description = "A multi-source news scraping and summarization tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "newspaper3k",
    "requests",
    "openai",
    "beautifulsoup4",
    "praw",
    "google-auth-oauthlib",
    "google-auth",
    "sendgrid",
    "pytz",
    "pytest",
    "nltk",
    "pydantic-ai>=0.2.12",
    "google-genai>=1.18.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
